app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: blackst5n2/hello-spring
        ports:
        - containerPort: 8080
