mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mysql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: app
